@@ -1,5 +1,6 @@
 #include "include.h"
 #include "GUIControl.h"
+
 #include "../xbmc/utils/GUIInfoManager.h"
 #include "LocalizeStrings.h"
 #include "../xbmc/Util.h"
